# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\NewsController;
 
 Route::post('/login', [AuthController::class, 'login']);
 
@@ -12,3 +13,11 @@ Route::middleware('auth:sanctum')->group(function () {
         return $request->user();
     });
 });
+
+Route::prefix('news')->controller(NewsController::class)->group(function () {
+    Route::get('', 'index')->name('news.index');   
+    Route::get('{news}', 'show')->name('news.show');
+});
+
+
+
